--- a/css/style.css
+++ b/css/style.css
@@ -576,7 +576,7 @@ section{
 
 }
 
-/* media-queries */
+/* media-queries
 @media(max-width: 991px){
     html{
         font-size: 55%;
@@ -645,4 +645,4 @@ section{
     .header{
         padding: 1.5rem 2rem;
     }
-}
+} */
